# ask-DB

./: .gitignore  DEPLOYMENT.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README.zh.md  USER_GUIDE.md
.claude/: settings.local.json
.gocache/: trim.txt
.gocache/00/: 000638259823e80399dd8999f0efefb41f9badcc0c4d532450d11728d36a5722-a  00a0f23a72b3c68d89d659c7b6ce0a130fadbb2199c5472f400bf576af9f81be-a  00ef87264f6adbb1fe3270e56ad1ab92f671b43959bb0dbf4a4fac4d6545a83b-d  00f959b361c221bcb38f55845539c76efece770818490f0b6fa63e53d01232d2-a
.gocache/01/: 01092f63ff9eebf07cd12672d93ea354c951a581ef400df5cc5e3b81a093b9e3-a  011a55fd0aa12927e6cb8e21a0e7cb6d2c9c26cdff89d069077dbac087901930-a  0198f51c6c97fc9deb583fe2a780ee719fb9c60c9f891d7827b8412d1dfffa26-a  01b2b2c0247338c842582b4fefc4dcedd2a7c04dab8f349bf759e652513d706d-a  01d7573a4a81add8fefbad45aef02f4f8f7968b31bb19e85ae94d47030aa281e-a  01ec2e7caa0e22eb5d1ba7b0dd770ec85556293c662448bcf7174b28863ef5d7-a  01ef3cadae6ac926a0f7368ef6aa318e270668c20eab2739d2c3ada037a62117-a
.gocache/02/: 0213cff9bcd7159b767a07fba33b82ac6ca10d866a9b43d613d63f1552842f32-d  021b9280ad55af9100c9fc6d120a121b271f494c62656d6513ed2d2390358c68-a  022756e4d7e0d2abf50ff4a1a8de27fcdc7c7a9a38787c0bbfb1e1a15c8ee04b-a  022e517cf46bd82ffa7a288ecfdd1e81a0f1ab924980ef4fbd43d81c6e8228f7-a  02345c078cce2d24502f2f6eaf89ee2c9e9542472013aaef1339529537c70a3c-a  (+7 more)
backend/: go.mod  go.sum
desktop/: Cargo.toml  package.json  tauri.conf.json
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.node.json
(+1740 files in other folders)
